# strange-attractors-qt

./: .gitignore  README.md  pyproject.toml
notebooks/: profile_integrators.ipynb  profile_lyapunov.ipynb
src/attractors/: __init__.py  __main__.py  aizawa.py  app.py  attractor.py  bifurcation_dialog.py  bifurcation_panel.py  bifurcation_worker.py  burke_shaw.py  control_panel.py  custom_panel.py  dadras.py  double_scroll.py  expression_parser.py  four_wing.py  loop_chaotic.py  loop_choatic.py  lorenz.py  lorenz84.py  lyapunov.py  models.py  perf.py  poincare_dialog.py  poincare_panel.py  presets.py  projection_panel.py  registry.py  session.py  solution_validation.py  solve_manager.py  solver.py  style.py  three_scroll.py  trajectory_panel.py  view_manager.py  worker.py
tests/: test_attractor_configs.py  test_bifurcation_panel.py  test_colour_cache.py  test_control_panel.py  test_custom_panel.py  test_expression_parser.py  test_lyapunov.py  test_poincare.py  test_render_decimation.py  test_solver.py  test_workers.py
