[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attractors"]

[project]
name = "strange-attractors-qt"
version = "0.1.0"
description = "PyQtGraph app for visualising strange attractors"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.1",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyopengl>=3.1.10",
    "pyqt6>=6.11.0",
    "pyqtgraph>=0.14.0",
]

[project.scripts]
strange-attractors = "attractors.__main__:main"

[dependency-groups]
dev = [
    "ipython>=9.15.0",
    "pytest>=9.1.1",
]

[tool.uv]
package = true
